fix align

--- a/wp-content/themes/theme/dev/src/sass/blocks/_b-text.scss
+++ b/wp-content/themes/theme/dev/src/sass/blocks/_b-text.scss
@@ -42,19 +42,18 @@
   }
 
   .aligncenter {
+    clear: both;
     display: block;
     margin-right: auto;
     margin-left: auto;
   }
   .alignright {
     float: right;
-    margin-bottom: 1em;
-    margin-left: 1em;
+    margin: 0.375em 0 1.75em 1.75em;
   }
   .alignleft {
     float: left;
-    margin-right: 1em;
-    margin-bottom: 1em;
+    margin: 0.375em 1.75em 1.75em 0;
   }
   .alignnone {
 
